--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "zui-upload",
   "description": "A Vue.js project",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "author": "ZhuGuangYong <860185538@qq.com>",
   "license": "MIT",
+  "homepage": "https://github.com/zhugy-cn/zui-upload",
   "main": "dist/zui-upload.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --content-base='./demo/'",
